--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Ameen Shah",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "nodemon": "^2.0.19"
   }
